remove horizontal scrollbar in chrome for 500-515 px. fix some z-index issues.

--- a/_scss/HIOA.scss
+++ b/_scss/HIOA.scss
@@ -12,4 +12,7 @@
 @import 'mobile500pxfix';
 @import 'facets';
 
-body {min-width: auto !important;}
+body {min-width: 5em;}
+@media screen and (min-width: 500px) {
+	html {overflow-x: hidden;}
+}
