--- a/_scss/_footer.scss
+++ b/_scss/_footer.scss
@@ -14,6 +14,10 @@
     /*color: white;*/
 }
 
+.EXLFooterTile div.EXLFooterUpdateContainer, .EXLFooterTile li {
+box-sizing: border-box;
+}
+
 /* footer link colors specified in hioa-header.css (uses the same colors) */
 
 @media screen and (max-width: 35rem) {
