--- a/_scss/_rp_resultscontainer_layout.scss
+++ b/_scss/_rp_resultscontainer_layout.scss
@@ -4,12 +4,26 @@
 	box-sizing: border-box;
 }
 
+/* make sure send to reference will come out on top*/
+#exliWhiteContent {
+	z-index: 50;
+}
+.EXLResultsList td.EXLThumbnail span.EXLThumbnailCaption {
+	border: none;
+}
 .EXLResultsContainer div.EXLResultsTile {
 	display: block;
 	width: 100%;
 	float: right;
 	margin-left: -$leftmenuwidth;
 	padding-left: $leftmenuwidth+.5em;
+	border-left: none;
+}
+@media screen and (max-width: $narrow-layout-breakpoint), (max-width: 500px) {
+	.EXLResultsContainer div.EXLResultsTile {
+		margin-left:0;
+		padding-left: 0;
+	}
 }
 
 @media screen and (min-width: $leftmenu-wide-breakpoint) {
@@ -53,7 +67,7 @@
 	clear: both;
 }
 
-@media screen and (min-width: 501px) {
+@media screen and (min-width: 501px) and (min-width: $narrow-layout-breakpoint) {
 	/* border between #exlidFacetTile and .EXLResultsContainer
 	 when screen layout is bigger than 500px */
 	/*#exlidResultsContainer::after {
@@ -82,7 +96,7 @@
 	}*/
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 500px), (max-width: $narrow-layout-breakpoint) {
 	#exlidFacetTile {
 		margin-top: 4em;
 		display: block;
