--- a/_scss/_usermenu.scss
+++ b/_scss/_usermenu.scss
@@ -36,7 +36,6 @@
 	#exlidUserAreaTile ul {
 		width: 100%;
 		position: relative;
-		right: -1%;
 	}
 	#exlidUserAreaTile ul li {
 		position: relative;
