--- a/_scss/_vars.scss
+++ b/_scss/_vars.scss
@@ -24,3 +24,4 @@ $leftmenu-wide-breakpoint: 70em;
 $header-bg: transparent;
 $footer-bg: transparent;
 $wide-layout-right-space-to-edge: .75em;
+$narrow-layout-breakpoint: 40em;
